--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities for mounting/unmounting drives in Linux",
   "main": "mountutils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/*.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,10 @@
     "mount",
     "umount"
   ],
+  "devDependencies": {
+    "mocha": "",
+    "should": ""
+  },
   "author": "Matt White <m.w.white@gmail.com>",
   "license": "MIT"
 }
